2010-01-25  Mook <mook.gcc@gmail.com>

	* include/wincrypt.h: Comment out CERT_ALT_NAME_ENTRY::x400Address.

2010-01-24  NightStrike <NightStrike@gmail.com>

	* include/wincrypt.h: Update to w32api 3.11 upstream.
	* include/w32api.h: Update w32api compatibility version number to
	3.11.

2010-01-23  Jonathan Yong  <jon_y@users.sourceforge.net>

	* Makefile.am: Add _mingw_ddk.h install rule.
	* ddk/include/sdks/_mingw_ddk.h: Removed.
	* crt/sdks/_mingw_ddk.h.in: New.
	* defaults/generate.sh: Add defaults for _mingw_ddk.h.
	* defaults/include/sdks/_mingw_ddk.h: New.
	* Makefile.in: Regenerated.
	* configure: Regenerated.

2010-01-18  Roland Schwingel  <roland.schwingel@onevision.com>

	* include/winternl.h (NtQueryInformationFile): Declare
	function.
	(NTQueryObject): Likewise.
	(FILE_INFORMATION_CLASS): Filled with all known definitions.
	(FILE_ALL_INFORMATION): Define struct.
	(FILE_PIPE_LOCAL_INFORMATION): Likewise.
	(FILE_MAILSLOT_SET_INFORMATION): Likewise.
	(FILE_MAILSLOT_QUERY_INFORMATION): Likewise.
	(FILE_ATTRIBUTE_TAG_INFORMATION): Likewise.
	(FILE_STREAM_INFORMATION): Likewise.
	(FILE_MODE_INFORMATION): Likewise.
	(FILE_FULL_EA_INFORMATION): Likewise.
	(FILE_END_OF_FILE_INFORMATION): Likewise.
	(FILE_ALLOCATION_INFORMATION): Likewise.
	(FILE_ALIGNMENT_INFORMATION): Likewise.
	(FILE_POSITION_INFORMATION): Likewise.
	(FILE_DISPOSITION_INFORMATION): Likewise.
	(FILE_NAMES_INFORMATION): Likewise.
	(FILE_RENAME_INFORMATION): Likewise.
	(FILE_NAME_INFORMATION): Likewise.
	(FILE_POSITION_INFORMATION): Likewise.
	(FILE_ACCESS_INFORMATION): Likewise.
	(FILE_EA_INFORMATION): Likewise.
	(FILE_INTERNAL_INFORMATION): Likewise.
	(FILE_ACCESS_INFORMATION): Likewise.
	(FILE_STANDARD_INFORMATION): Likewise.
	(FILE_BASIC_INFORMATION): Likewise.
	(FILE_ID_BOTH_DIRECTORY_INFORMATION): Likewise.
	(FILE_BOTH_DIRECTORY_INFORMATION): Likewise.
	(FILE_ID_FULL_DIRECTORY_INFORMATION): Likewise.
	(FILE_FULL_DIRECTORY_INFORMATION): Likewise.
	(FILE_NETWORK_OPEN_INFORMATION): Likewise.